modules/k8s/helm/istio/gateway/fdk-codes-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fdk-codes-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: fdk-codes-tls
      hosts:
        - "*.fdk.codes"
