modules/k8s/helm/istio/gateway/k8s-dashboard-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubernetes-dashboard-gateway
  namespace: kube-system
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "k8s-dashboard.fdk.codes"
      tls:
        mode: PASSTHROUGH
