modules/k8s/helm/istio/gateway/keycloak-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: fdk-codes-tls
      hosts:
        - "iam.fdk.codes"
