modules/k8s/helm/istio/gateway/kibana-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: logging
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: fdk-codes-tls
      hosts:
        - "logs.fdk.codes"
