modules/k8s/helm/istio/gateway/grafana-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "grafana.fdk.codes"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: grafana
