modules/k8s/helm/istio/gateway/k8s-dashboard-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  hosts:
    - "k8s-dashboard.fdk.codes"
  gateways:
    - kubernetes-dashboard-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: kubernetes-dashboard
