modules/k8s/helm/istio/gateway/second-brain-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: second-brain
  namespace: istio-ingress
spec:
  hosts:
    - "notes.fdk.codes"
  gateways:
    - fdk-codes-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: second-brain.default.svc.cluster.local
